--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    width: 100%;
     background-color: rgb(5, 73, 73);
 
 }
@@ -15,11 +16,25 @@ header{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
 }
-.navbar a:hover{
+.navbar  a:hover{
     background-color: rgb(5, 41, 37);
     border-radius: 20px;
 }
+.signbtns{
+    position: relative;
+    right: 40px;
+    text-align: right;
+}
+.signbtns a{
+    text-decoration: none;
+    padding: 14px;
+    color: seashell;
 
+}
+.signbtns a:hover{
+    background-color: rgba(40, 151, 127, 0.692);
+    border-radius: 20px;
+}
 main{
     display: flex;
     width: auto;
