--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
   width: 100%;
-  background-color: rgb(5, 73, 73);
+  background-image: linear-gradient(to right, rgb(70, 36, 70), rgb(68, 106, 104));
 }
 
 header {
@@ -19,10 +19,12 @@ header {
   color: rgb(230, 230, 230);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
+  text-shadow: 0 0 14px greenyellow;
 }
 .navbar a:hover {
-  background-color: rgb(5, 41, 37);
+  background-color: rgb(97, 71, 90);
   border-radius: 20px;
+  
 }
 .selected {
   width: 800px;
@@ -41,8 +43,9 @@ header {
   color: seashell;
 }
 .signbtns a:hover {
-  background-color: rgba(40, 151, 127, 0.692);
+  background-color: rgb(97, 71, 90);
   border-radius: 20px;
+  text-shadow: 0 0 14px greenyellow;
 }
 main {
   display: flex;
@@ -52,15 +55,27 @@ main {
   margin-bottom: auto;
 }
 .box1 {
+  text-align: center;
+  padding: 20px;
   position: relative;
   top: 30px;
   left: 10px;
   width: 500px;
   height: 200px;
-  background-color: rgba(222, 184, 135, 0.391);
+  
 }
+
 .box1 h1 {
-  font-size: 10px;
+  color: aliceblue;
+  text-shadow: 0 0 14px #ff005b;
+  font-size: 24px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.box1 p {
+  padding: 20px;
+  font-size: 16px;
+  color: rgba(255, 237, 254, 0.79);
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 .box2 {
   position: relative;
@@ -69,6 +84,7 @@ main {
   background-color: pink;
   width: 400px;
   height: 200px;
+  filter: blur(20px);
 }
 footer {
   text-align: center;
