added image to the home page

--- a/style.css
+++ b/style.css
@@ -12,13 +12,16 @@ header {
   width: auto;
   height: 40px;
 }
-
+nav{
+  position: relative;
+  left: 40px;
+}
 .navbar a {
   text-decoration: none;
   padding: 14px;
-  color: rgb(230, 230, 230);
+  color: rgb(255, 255, 255);
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 13px;
+  font-size: 15px;
   text-shadow: 0 0 14px greenyellow;
 }
 .navbar a:hover {
@@ -47,7 +50,15 @@ header {
   border-radius: 20px;
   text-shadow: 0 0 14px greenyellow;
 }
+.signbtns p{
+  position: relative;
+  right: 180px;
+  top: 20px;
+  color: rgba(118, 247, 247, 0.585) ;
+  font-family: Arial, Helvetica, sans-serif;
+}
 main {
+  align-items: center;
   display: flex;
   width: auto;
   height: 600px;
@@ -59,7 +70,7 @@ main {
   padding: 20px;
   position: relative;
   top: 30px;
-  left: 10px;
+  left: 90px;
   width: 500px;
   height: 200px;
   
@@ -79,12 +90,19 @@ main {
 }
 .box2 {
   position: relative;
+  border-radius: 60px;
   top: 30px;
-  left: 40px;
-  background-color: pink;
-  width: 400px;
-  height: 200px;
-  filter: blur(20px);
+  left: 200px;
+  bottom: 20px;
+  width: 350px;
+  height: 300px;
+}
+img{
+  border-radius: 80px;
+  background-position: center;
+  background-size: cover;
+  width: 350px;
+  height: 300px;
 }
 footer {
   text-align: center;
