--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
 }
 
 body {
-  width: 100%;
+  margin: 0;
   background-image: linear-gradient(to right, rgb(70, 36, 70), rgb(68, 106, 104));
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
@@ -26,13 +27,12 @@ nav{
 }
 .navbar a:hover {
   background-color: rgb(97, 71, 90);
-  border-radius: 20px;
-  
+  border-radius: 20px; 
 }
 .selected {
   width: 800px;
   padding: 10px;
-  background-color: rgba(10, 175, 172, 0.233);
+  background-color: rgb(97, 71, 90);
   border-radius: 20px;
 }
 .signbtns {
@@ -46,7 +46,7 @@ nav{
   color: seashell;
 }
 .signbtns a:hover {
-  background-color: rgb(97, 71, 90);
+  background-color: rgb(222, 176, 255);
   border-radius: 20px;
   text-shadow: 0 0 14px greenyellow;
 }
@@ -54,7 +54,7 @@ nav{
   position: relative;
   right: 180px;
   top: 20px;
-  color: rgba(118, 247, 247, 0.585) ;
+  color: rgba(244, 229, 243, 0.585) ;
   font-family: Arial, Helvetica, sans-serif;
 }
 main {
@@ -73,19 +73,40 @@ main {
   left: 90px;
   width: 500px;
   height: 200px;
+  animation: box1anim 700ms ease-in;
   
+}
+@keyframes box1anim  {
+  0%{
+    transform: translateX(-100%);
+
+  }
+  100%{
+    transform: translateX(0);
+  }
+
+}
+@keyframes box2anim  {
+  0%{
+    transform: translateX(100%);
+
+  }
+  100%{
+    transform: translateX(0);
+  }
+
 }
 
 .box1 h1 {
   color: aliceblue;
   text-shadow: 0 0 14px #ff005b;
-  font-size: 24px;
+  font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
-.box1 p {
-  padding: 20px;
+.questions ul {
+  padding: 10px;
   font-size: 16px;
-  color: rgba(255, 237, 254, 0.79);
+  color: rgba(255, 255, 255, 0.79);
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 .box2 {
@@ -96,6 +117,7 @@ main {
   bottom: 20px;
   width: 350px;
   height: 300px;
+  animation: box2anim 700ms ease-in;
 }
 img{
   border-radius: 80px;
