--- a/style.css
+++ b/style.css
@@ -5,7 +5,11 @@
 
 body {
   margin: 0;
-  background-image: linear-gradient(to right, rgb(70, 36, 70), rgb(68, 106, 104));
+  background-image: linear-gradient(
+    to right,
+    rgb(70, 36, 70),
+    rgb(68, 106, 104)
+  );
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -13,7 +17,7 @@ header {
   width: auto;
   height: 40px;
 }
-nav{
+nav {
   position: relative;
   left: 40px;
 }
@@ -27,7 +31,7 @@ nav{
 }
 .navbar a:hover {
   background-color: rgb(97, 71, 90);
-  border-radius: 20px; 
+  border-radius: 20px;
 }
 .selected {
   width: 800px;
@@ -50,11 +54,11 @@ nav{
   border-radius: 20px;
   text-shadow: 0 0 14px greenyellow;
 }
-.signbtns p{
+.signbtns p {
   position: relative;
   right: 180px;
   top: 20px;
-  color: rgba(244, 229, 243, 0.585) ;
+  color: rgba(244, 229, 243, 0.585);
   font-family: Arial, Helvetica, sans-serif;
 }
 main {
@@ -74,29 +78,25 @@ main {
   width: 500px;
   height: 200px;
   animation: box1anim 700ms ease-in;
-  
 }
-@keyframes box1anim  {
-  0%{
+@keyframes box1anim {
+  0% {
     transform: translateX(-100%);
-
   }
-  100%{
+  100% {
     transform: translateX(0);
   }
-
 }
-@keyframes box2anim  {
-  0%{
+@keyframes box2anim {
+  0% {
     transform: translateX(100%);
-
   }
-  100%{
+  100% {
     transform: translateX(0);
   }
-
 }
 
+/*Home page text area*/
 .box1 h1 {
   color: aliceblue;
   text-shadow: 0 0 14px #ff005b;
@@ -119,7 +119,8 @@ main {
   height: 300px;
   animation: box2anim 700ms ease-in;
 }
-img{
+/* Home page img styling*/
+img {
   border-radius: 80px;
   background-position: center;
   background-size: cover;
@@ -133,5 +134,65 @@ footer {
   color: white;
   font-family: "Courier New", Courier, monospace;
 }
-/*sign in form section*/
 
+/*
+*sign in form styling
+*/
+
+.formContainer {
+  margin: auto;
+  padding-top: 50px;
+  border-radius: 20px;
+  width: 500px;
+  height: 510px;
+}
+
+.SignInform {
+  text-align: center;
+  border-radius: 20px;
+  background-color: #72727213;
+  box-shadow: 0 0 10px 0 rgb(97, 10, 85);
+  height: 400px;
+}
+.SignInform h1{
+  padding: 20px;
+  margin-bottom: 10px;
+  color: white;
+  text-shadow: 0 0 14px red;
+  font-size: 30px;
+}
+
+
+ul.formlist {
+  list-style-type: none;
+  color: white;
+  text-shadow: 0 0 14px red;
+}
+ul.formlist li {
+  margin-top: 10px;
+  margin-bottom: 50px;
+  width: auto;
+}
+ul.formlist li input {
+  background-image: linear-gradient(
+    to right,
+    rgba(70, 36, 70, 0.336),
+    rgba(68, 106, 104, 0.322)
+  );
+  border-radius: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border: none;
+  width: 170px;
+  text-align: center;
+  transition: width 1s;
+
+}
+ul.formlist li input[type="button"] {
+  background-color: rgb(137, 237, 255);
+  width: 70px;  
+}
+
+ul.formlist li input:hover {
+  width: 250px;
+}
