--- a/style.css
+++ b/style.css
@@ -5,11 +5,9 @@
 
 body {
   margin: 0;
-  background-image: linear-gradient(
-    to right,
-    rgb(70, 36, 70),
-    rgb(68, 106, 104)
-  );
+  background-image: url("Images/bluebulb.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -27,7 +25,7 @@ nav {
   color: rgb(255, 255, 255);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
-  text-shadow: 0 0 14px greenyellow;
+  text-shadow: 0 0 14px rgb(84, 219, 243);
 }
 .navbar a:hover {
   background-color: rgb(97, 71, 90);
@@ -39,6 +37,9 @@ nav {
   background-color: rgb(97, 71, 90);
   border-radius: 20px;
 }
+/* 
+*Sign-in and Sign-up buttons style 
+*/
 .signbtns {
   position: relative;
   right: 40px;
@@ -52,15 +53,17 @@ nav {
 .signbtns a:hover {
   background-color: rgb(222, 176, 255);
   border-radius: 20px;
-  text-shadow: 0 0 14px greenyellow;
+  text-shadow: 0 0 14px rgb(84, 219, 243);
 }
 .signbtns p {
   position: relative;
   right: 180px;
   top: 20px;
-  color: rgba(244, 229, 243, 0.585);
+  color: rgb(255, 255, 255);
+  text-shadow: 0 0 14px rgb(84, 219, 243);
   font-family: Arial, Helvetica, sans-serif;
 }
+/* Home page main section positioning */
 main {
   align-items: center;
   display: flex;
@@ -79,6 +82,9 @@ main {
   height: 200px;
   animation: box1anim 700ms ease-in;
 }
+/* 
+* animation for homepage 
+*/
 @keyframes box1anim {
   0% {
     transform: translateX(-100%);
@@ -99,7 +105,7 @@ main {
 /*Home page text area*/
 .box1 h1 {
   color: aliceblue;
-  text-shadow: 0 0 14px #ff005b;
+  text-shadow: 0 0 14px rgb(84, 219, 243);
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -134,7 +140,6 @@ footer {
   color: white;
   font-family: "Courier New", Courier, monospace;
 }
-
 /*
 *sign in form styling
 */
@@ -150,23 +155,22 @@ footer {
 .SignInform {
   text-align: center;
   border-radius: 20px;
-  background-color: #72727213;
-  box-shadow: 0 0 10px 0 rgb(97, 10, 85);
+  background-color: #1b1b1bd0;
+  box-shadow: 0 0 10px 0 rgb(84, 219, 243);
   height: 400px;
 }
-.SignInform h1{
+.SignInform h1 {
   padding: 20px;
   margin-bottom: 10px;
   color: white;
-  text-shadow: 0 0 14px red;
+  text-shadow: 0 0 14px rgb(5, 191, 224);
   font-size: 30px;
 }
-
 
 ul.formlist {
   list-style-type: none;
   color: white;
-  text-shadow: 0 0 14px red;
+  text-shadow: 0 0 14px rgb(84, 219, 243);
 }
 ul.formlist li {
   margin-top: 10px;
@@ -186,11 +190,10 @@ ul.formlist li input {
   width: 170px;
   text-align: center;
   transition: width 1s;
-
 }
 ul.formlist li input[type="button"] {
   background-color: rgb(137, 237, 255);
-  width: 70px;  
+  width: 70px;
 }
 
 ul.formlist li input:hover {
