--- a/style.css
+++ b/style.css
@@ -5,35 +5,30 @@
 
 body {
   margin: 0;
-  background-image: url("Images/whitebulb.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
   font-family: Arial, Helvetica, sans-serif;
 }
+/*
+  *website animated background section
+*/
 section {
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(
-    -45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 400% 400%;
-    position: relative; 
-    animation: change 10s ease-in-out infinite;   
+  background-image: linear-gradient(90deg, #FF3CAC, #784BA0, #D9AFD9, #2B86C5);
+  background-size: 400% 400%;
+  position: relative;
+  animation: color-change 10s ease-in-out infinite;
 }
 
-@keyframes change{
-  0%{
+@keyframes  color-change{
+  0% {
     background-position: 0 50%;
-
   }
-  50%{
+  50% {
     background-position: 100% 50%;
-
   }
-  100%{
+  100% {
     background-position: 0 50%;
-
   }
-  
 }
 
 header {
@@ -57,9 +52,10 @@ nav {
   border-left: none;
 }
 .navbar a {
+  font-weight: bold;
   text-decoration: none;
   padding: 14px;
-  color: rgb(248, 216, 248);
+  color: rgb(255, 255, 255);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
   text-shadow: 0 0 14px rgb(84, 219, 243);
@@ -99,7 +95,7 @@ nav {
   position: relative;
   right: 180px;
   top: 20px;
-  color: rgba(73, 255, 246, 0.493);
+  color: rgba(206, 206, 206, 0.822);
   text-shadow: 0 0 14px rgb(84, 219, 243);
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -196,7 +192,7 @@ footer {
 .SignInform {
   text-align: center;
   border-radius: 20px;
-  background-color: #ffffffd0;
+  background-color: #ffffff15;
   box-shadow: 0 0 10px 0 rgb(84, 219, 243);
   height: 400px;
 }
@@ -204,14 +200,14 @@ footer {
   padding: 20px;
   margin-bottom: 10px;
   color: white;
-  text-shadow: 0 0 14px rgb(5, 191, 224);
+  text-shadow: 0 0 14px rgb(222, 124, 255);
   font-size: 30px;
 }
 
 ul.formlist {
   list-style-type: none;
   color: rgb(255, 255, 255);
-  text-shadow: 0 0 14px rgb(84, 219, 243);
+  text-shadow: 0 0 14px rgb(255, 54, 54);
 }
 ul.formlist li {
   margin-top: 10px;
@@ -219,11 +215,7 @@ ul.formlist li {
   width: auto;
 }
 ul.formlist li input {
-  background-image: linear-gradient(
-    to right,
-    rgba(70, 36, 70, 0.336),
-    rgba(68, 106, 104, 0.322)
-  );
+  background-color: white;
   border-radius: 5px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -231,12 +223,18 @@ ul.formlist li input {
   text-align: center;
   transition: width 1s;
 }
-ul.formlist li input[type="button"] {
-  background-color: rgb(137, 237, 255);
-  width: 70px;
+ul.formlist button{
+  border-radius: 10px;
+  color: #ffffff;
+  background-color: #352961;
+  width: 60px;
+  height: 30px;
+}
+ul.formlist button:hover{
+  background-color: rgb(29, 145, 165);
 }
 
 ul.formlist li input:hover {
   width: 250px;
-  border-color: aqua;
+  border-color: rgb(162, 0, 255);
 }
