--- a/style.css
+++ b/style.css
@@ -8,18 +8,18 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 /*
-  *website animated background section
+  * website animated background section
 */
 section {
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(90deg, #FF3CAC, #784BA0, #D9AFD9, #2B86C5);
+  background-image: linear-gradient(90deg, #ff3cac, #784ba0, #d9afd9, #2b86c5);
   background-size: 400% 400%;
   position: relative;
   animation: color-change 10s ease-in-out infinite;
 }
 
-@keyframes  color-change{
+@keyframes color-change {
   0% {
     background-position: 0 50%;
   }
@@ -78,7 +78,6 @@ nav {
 .signbtns a {
   font-size: 14px;
   background-color: rgba(45, 54, 58, 0.487);
-
   text-decoration: none;
   padding: 14px;
   color: rgb(243, 243, 243);
@@ -138,8 +137,9 @@ main {
     transform: translateX(0);
   }
 }
-
-/*Home page text area*/
+/*
+*Home page text area
+*/
 .box1 h1 {
   color: aliceblue;
   text-shadow: 0 0 14px rgb(84, 219, 243);
@@ -189,14 +189,14 @@ footer {
   height: 510px;
 }
 
-.SignInform {
+.forms {
   text-align: center;
   border-radius: 20px;
   background-color: #ffffff15;
   box-shadow: 0 0 10px 0 rgb(84, 219, 243);
   height: 400px;
 }
-.SignInform h1 {
+.forms h1 {
   padding: 20px;
   margin-bottom: 10px;
   color: white;
@@ -204,17 +204,17 @@ footer {
   font-size: 30px;
 }
 
-ul.formlist {
+ul.signInform {
   list-style-type: none;
   color: rgb(255, 255, 255);
   text-shadow: 0 0 14px rgb(255, 54, 54);
 }
-ul.formlist li {
+ul.signInform li {
   margin-top: 10px;
   margin-bottom: 50px;
   width: auto;
 }
-ul.formlist li input {
+ul.signInform li input {
   background-color: white;
   border-radius: 5px;
   padding-top: 10px;
@@ -223,18 +223,58 @@ ul.formlist li input {
   text-align: center;
   transition: width 1s;
 }
-ul.formlist button{
+ul.signInform button {
   border-radius: 10px;
   color: #ffffff;
   background-color: #352961;
   width: 60px;
   height: 30px;
 }
-ul.formlist button:hover{
+ul.signInform button:hover {
   background-color: rgb(29, 145, 165);
 }
 
-ul.formlist li input:hover {
+ul.signInform li input:hover {
+  width: 250px;
+  border-color: rgb(162, 0, 255);
+}
+/*
+*Sign up form styling
+*/
+
+ul.signUpform {
+  padding: 10px;
+  text-align: left;
+  list-style-type: none;
+  color: rgb(255, 255, 255);
+  text-shadow: 0 0 14px rgb(255, 54, 54);
+}
+ul.signUpform li {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: auto;
+}
+ul.signUpform li input {
+  background-color: white;
+  border-radius: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 170px;
+  text-align: center;
+  transition: width 1s;
+}
+ul.signUpform button {
+  border-radius: 10px;
+  color: #ffffff;
+  background-color: #352961;
+  width: 60px;
+  height: 30px;
+}
+ul.signUpform button:hover {
+  background-color: rgb(29, 145, 165);
+}
+
+ul.signUpform li input:hover {
   width: 250px;
   border-color: rgb(162, 0, 255);
 }
