--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
 }
-html{
+html {
   height: 100%;
 }
 
@@ -14,8 +14,8 @@ body {
 footer {
   width: 100%;
   height: 30px;
-  background-color:red;
-  color:black;
+  background-color: red;
+  color: black;
   overflow: hidden;
 }
 /*
@@ -24,7 +24,7 @@ footer {
 section {
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(90deg, #ff3cac, #784ba0, #d9afd9, #2b86c5);
+  background-image: linear-gradient(90deg, #20002c, #734b6d, #fd746c, #89253e);
   background-size: 400% 400%;
   position: relative;
   animation: color-change 10s ease-in-out infinite;
@@ -322,7 +322,7 @@ ul.signUpform li input:hover {
 .grid-container2 {
   grid-auto-rows: minmax(100px, auto);
   display: grid;
-  grid-template-columns:30% 60% 20%;
+  grid-template-columns: 30% 60% 20%;
   grid-template-rows: 300px;
   grid-gap: 1em;
   padding: 10rem;
@@ -336,12 +336,12 @@ ul.signUpform li input:hover {
 }
 .highest-score {
   background-color: rgba(241, 189, 253, 0.603);
-  box-shadow: 0 0 10px 0 rgb(255, 255, 255);
+  box-shadow: 0 0 10px 0 rgb(0, 0, 0);
   text-align: center;
 }
 .user-name {
   background-color: rgba(241, 189, 253, 0.603);
-  box-shadow: 0 0 10px 0 rgb(255, 255, 255);
+  box-shadow: 0 0 10px 0 rgb(0, 0, 0);
   text-align: center;
   padding: 30px;
 }
@@ -356,7 +356,6 @@ ul.signUpform li input:hover {
   font-size: 0.9em;
   width: 100%;
   height: 100%;
-  
 }
 .table-container thead {
   text-shadow: 0 0 10px rgb(255, 53, 221);
@@ -366,26 +365,115 @@ ul.signUpform li input:hover {
   text-align: center;
 }
 .table-container th,
-.table-container td{
+.table-container td {
   padding: 12px 15px;
 }
-.table-container tbody tr{
+.table-container tbody tr {
   border-bottom: 1px solid rgba(255, 249, 249, 0.226);
   background-color: rgba(255, 255, 255, 0.521);
-  
 }
-.showLevel{
+.showLevel {
   color: rgb(252, 252, 252);
   font-size: 70px;
   text-shadow: 0 0 10px rgb(0, 0, 0);
   padding-top: 50%;
 }
-.user-name h1{
+.user-name h1 {
   color: rgb(77, 48, 73);
   text-shadow: 0 0 10px rgb(255, 172, 251);
 }
-.highest-score h1{
+.highest-score h1 {
   color: rgb(77, 48, 73);
-  padding-top: 10px;;
+  padding-top: 10px;
   text-shadow: 0 0 10px rgb(255, 172, 251);
 }
+
+/*
+* Contact page design
+*/
+.contact-Form {
+  gap: 10px;
+  display: flex;
+  justify-content: center;
+  padding-top: 10%;
+  
+}
+.left-side{
+  width: 300px;
+  height: 400px;
+  background-color:rgba(255, 255, 255, 0);
+  text-align: center;
+  box-shadow: 0 0 10px rgb(39, 230, 255);
+
+}
+.left-side h1:nth-child(1){
+  background-color: rgba(0, 0, 0, 0.295);
+  padding-top:10px;
+  font-size: 30px;
+  color: rgb(255, 255, 255);
+  text-shadow: 0 0 10px red;
+  justify-content: center;
+  
+}
+.left-side p{
+  padding-top: 30%;
+  font-size:18px;
+  color: rgb(243, 243, 243);
+
+}
+.phoneNum{
+  text-align: center;
+  color:black;
+  padding-top:53%;
+}
+.phoneNum h1{
+  color:black;
+}
+.right-side{
+  width: 500px;
+  height: 400px;
+  background-color:rgba(255, 166, 0, 0.035);
+  box-shadow: 0 0 10px rgb(39, 230, 255);
+}
+.right-side h1{
+  color: white;
+  text-shadow: 0 0 10px red;
+  text-align: center;
+}
+.formlist ul{
+  list-style-type: none;
+  padding: 10px;
+
+}
+.formlist ul li{
+  padding: 10px;
+}
+.formlist ul li input{
+  border: none;
+  width: 200px;
+  height: 22px;
+  text-align: left;
+  padding-left: 5px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.384);
+}
+.formlist ul li textarea{
+  background-color:none;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.494);
+}
+.formlist ul li button{
+  box-shadow: 0 0 10px black;
+  border-radius: 10px;
+  background-color: rgb(82, 40, 82);
+  color: white;
+  text-shadow: 0 0 10px red;
+  width: 80px;
+  height: 30px;
+  border: none;
+}
+.formlist ul li button:hover{
+  background-color: rgb(255, 189, 255);
+}
+
