--- a/style.css
+++ b/style.css
@@ -123,7 +123,6 @@ main {
   margin-bottom: auto;
 }
 .box1 {
-  box-shadow: 0 0 10px 0 rgb(0, 0, 0);
   text-align: center;
   padding: 20px;
   position: relative;
@@ -184,6 +183,7 @@ img {
   background-size: cover;
   width: 350px;
   height: 300px;
+  box-shadow: 0 0 10px black;
 }
 /*
 *sign in form styling
@@ -232,11 +232,14 @@ ul.signInform li input {
   transition: width 1s;
 }
 ul.signInform button {
+  box-shadow: 0 0 10px black;
   border-radius: 10px;
-  color: #ffffff;
-  background-color: #352961;
-  width: 60px;
+  background-color: rgb(82, 40, 82);
+  color: white;
+  text-shadow: 0 0 10px red;
+  width: 80px;
   height: 30px;
+  border: none;
 }
 ul.signInform button:hover {
   background-color: rgb(29, 145, 165);
@@ -272,10 +275,14 @@ ul.signUpform li input {
   transition: width 1s;
 }
 ul.signUpform button {
+  box-shadow: 0 0 10px black;
   border-radius: 10px;
-  color: #ffffff;
-  background-color: #352961;
-  width: 60px;
+  background-color: rgb(82, 40, 82);
+  color: white;
+  text-shadow: 0 0 10px red;
+  width: 80px;
+  height: 30px;
+  border: none;
   height: 30px;
 }
 ul.signUpform button:hover {
@@ -396,59 +403,54 @@ ul.signUpform li input:hover {
   display: flex;
   justify-content: center;
   padding-top: 10%;
-  
 }
-.left-side{
+.left-side {
   width: 300px;
   height: 400px;
-  background-color:rgba(255, 255, 255, 0);
+  background-color: rgba(255, 255, 255, 0);
   text-align: center;
   box-shadow: 0 0 10px rgb(39, 230, 255);
-
 }
-.left-side h1:nth-child(1){
+.left-side h1:nth-child(1) {
   background-color: rgba(0, 0, 0, 0.295);
-  padding-top:10px;
+  padding-top: 10px;
   font-size: 30px;
   color: rgb(255, 255, 255);
   text-shadow: 0 0 10px red;
   justify-content: center;
-  
 }
-.left-side p{
+.left-side p {
   padding-top: 30%;
-  font-size:18px;
+  font-size: 18px;
   color: rgb(243, 243, 243);
-
 }
-.phoneNum{
+.phoneNum {
   text-align: center;
-  color:black;
-  padding-top:53%;
+  color: black;
+  padding-top: 53%;
 }
-.phoneNum h1{
-  color:black;
+.phoneNum h1 {
+  color: black;
 }
-.right-side{
+.right-side {
   width: 500px;
   height: 400px;
-  background-color:rgba(255, 166, 0, 0.035);
+  background-color: rgba(255, 166, 0, 0.035);
   box-shadow: 0 0 10px rgb(39, 230, 255);
 }
-.right-side h1{
+.right-side h1 {
   color: white;
   text-shadow: 0 0 10px red;
   text-align: center;
 }
-.formlist ul{
+.formlist ul {
   list-style-type: none;
   padding: 10px;
-
 }
-.formlist ul li{
+.formlist ul li {
   padding: 10px;
 }
-.formlist ul li input{
+.formlist ul li input {
   border: none;
   width: 200px;
   height: 22px;
@@ -457,13 +459,13 @@ ul.signUpform li input:hover {
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.384);
 }
-.formlist ul li textarea{
-  background-color:none;
+.formlist ul li textarea {
+  background-color: none;
   border: none;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.494);
 }
-.formlist ul li button{
+.formlist ul li button {
   box-shadow: 0 0 10px black;
   border-radius: 10px;
   background-color: rgb(82, 40, 82);
@@ -473,7 +475,6 @@ ul.signUpform li input:hover {
   height: 30px;
   border: none;
 }
-.formlist ul li button:hover{
-  background-color: rgb(255, 189, 255);
+.formlist ul li button:hover {
+  background-color: rgb(29, 145, 165);
 }
-
