--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ footer {
   height: 30px;
   background-color: red;
   color: black;
-  overflow: hidden;
 }
 /*
   * website animated background section
@@ -24,7 +23,7 @@ footer {
 section {
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(90deg, #20002c, #734b6d, #fd746c, #89253e);
+  background-image: linear-gradient(90deg, #fd746c, #89253e, #20002c, #734b6d);
   background-size: 400% 400%;
   position: relative;
   animation: color-change 10s ease-in-out infinite;
@@ -353,7 +352,7 @@ ul.signUpform li input:hover {
   padding: 30px;
 }
 /* 
-* score board design 
+* score table design 
 */
 .table-container {
   border-radius: 10px;
@@ -398,16 +397,20 @@ ul.signUpform li input:hover {
 /*
 * Contact page design
 */
+
 .contact-Form {
   gap: 10px;
   display: flex;
   justify-content: center;
   padding-top: 10%;
 }
+
+/* left side design */
+
 .left-side {
   width: 300px;
   height: 400px;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgb(255, 255, 255);
   text-align: center;
   box-shadow: 0 0 10px rgb(39, 230, 255);
 }
@@ -422,7 +425,7 @@ ul.signUpform li input:hover {
 .left-side p {
   padding-top: 30%;
   font-size: 18px;
-  color: rgb(243, 243, 243);
+  color: rgb(0, 0, 0);
 }
 .phoneNum {
   text-align: center;
@@ -432,6 +435,36 @@ ul.signUpform li input:hover {
 .phoneNum h1 {
   color: black;
 }
+
+.medialinks{
+  display: flex;
+  gap: 15px;
+  width: 100%;
+  height: 50px;
+  padding-top: 30px;
+  justify-content: center;
+}
+.medialinks > div{
+  border-radius: 10px;
+  width: 50px;
+  height: 50px;
+  background-size: cover;
+}
+.facebook-icon{
+  background-image: url(Images/facebook.png);
+}
+.instagram-icon{
+  background-image: url(Images/instagram.jpg);
+}
+.twitter-icon{
+  background-image: url(Images/twitter.png);
+}
+.github-icon{
+  background-image: url(Images/GitHub.png);
+}
+
+/* right side design */
+
 .right-side {
   width: 500px;
   height: 400px;
@@ -478,3 +511,8 @@ ul.signUpform li input:hover {
 .formlist ul li button:hover {
   background-color: rgb(29, 145, 165);
 }
+
+/*
+!Game page design
+*/
+
