added canvas in game page

--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ main {
   text-align: center;
   border-radius: 20px;
   background-color: #ffffff15;
-  box-shadow: 0 0 10px 0 rgb(84, 219, 243);
+  box-shadow: 0 0 10px 0 rgba(247, 244, 120, 0.692);
   height: 400px;
 }
 .forms h1 {
@@ -319,7 +319,7 @@ ul.signUpform li input:hover {
   text-align: center;
   grid-column: 1/2;
   grid-row: 1/2;
-  box-shadow: 0 0 10px 0 black;
+  box-shadow: 0 0 10px 0 rgba(247, 244, 120, 0.692);
 }
 .grid-item-1 p {
   color: white;
@@ -329,23 +329,26 @@ ul.signUpform li input:hover {
   line-height: 40px;
 }
 .grid-item-1 button{
-  background-color: #3a1647;
-  font-size: 15px;
-  font-weight: bold;
-  color: rgb(255, 255, 255);
-  text-shadow: 0 0 10px rgb(255, 11, 11);
+  background-image: url("Images/clickmebg.jpg");
+  background-size: cover;
   border: 1px solid rgba(0, 0, 0, 0.562);
-  width: 80px;
-  height: 80px;
+  text-shadow: 0 0 10px rgb(255, 11, 11);
+  color: rgb(255, 255, 255);
+  box-shadow: 0 0 10px black;
+  width: 250px;
+  height: 250px;
+  margin-top: 10%;
+  font-size: 40px;
+  font-weight: bold;
+  border:none;
   border-radius: 50%;
-  box-shadow: 0 0 10px rgb(255, 255, 255);
 }
 .grid-item-1 button:hover{
-  background-color: rgb(32, 147, 255);
+  background-color: aqua;
   color: black;
 }
 .grid-item-2 {
-  box-shadow: 0 0 10px 0 black;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.692);
 }
 
 
@@ -366,16 +369,16 @@ ul.signUpform li input:hover {
   border-radius: 10px;
   grid-column: 1/3;
   grid-row: 1/3;
-  box-shadow: 0 0 10px 0 rgb(0, 0, 0);
+  box-shadow: 0 0 10px 0 rgba(247, 244, 120, 0.692);
 }
 .highest-score {
   background-color: rgba(241, 189, 253, 0.603);
-  box-shadow: 0 0 10px 0 rgb(0, 0, 0);
+  box-shadow: 0 0 10px 0 rgba(247, 244, 120, 0.692);
   text-align: center;
 }
 .user-name {
   background-color: rgba(241, 189, 253, 0.603);
-  box-shadow: 0 0 10px 0 rgb(0, 0, 0);
+  box-shadow: 0 0 10px 0 rgba(247, 244, 120, 0.692);
   text-align: center;
   padding: 30px;
 }
@@ -440,7 +443,7 @@ ul.signUpform li input:hover {
   height: 400px;
   background-color: rgb(255, 255, 255);
   text-align: center;
-  box-shadow: 0 0 10px rgb(39, 230, 255);
+  box-shadow: 0 0 10px rgba(247, 244, 120, 0.692);
 }
 .left-side h1:nth-child(1) {
   background-color: rgba(48, 28, 60, 0.987);
@@ -483,7 +486,7 @@ ul.signUpform li input:hover {
   width: 500px;
   height: 400px;
   background-color: rgba(255, 166, 0, 0.035);
-  box-shadow: 0 0 10px rgb(39, 230, 255);
+  box-shadow: 0 0 10px rgba(247, 244, 120, 0.692);
 }
 .right-side h1 {
   color: white;
@@ -529,3 +532,29 @@ ul.signUpform li input:hover {
 /*
 !Game page design
 */
+.gameCanvas{
+background-color: rgb(255, 255, 255);
+width: 60%;
+height: 60%;
+color:rgb(0, 0, 0);
+margin-left: 20%;
+margin-top: 10%;
+box-shadow: 0 0 50px black;
+}
+.gameCanvas .gameTitle{
+  color: rgb(255, 255, 255);
+  text-shadow: 0 0 10px red;
+  font-weight: bold;
+  width: 100%;
+  height: 30px;
+  padding-top: 10px;
+  background-color: rgb(45, 30, 58);
+  text-align: center;
+}
+.gameCanvas .startGame-button{
+  background-color: black;
+  border-radius: 50%;
+  margin: 10px;
+  height: 20px;
+  width:20px;
+}
