finished start screen of game page

--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ body {
   min-height: 100%;
 }
 footer {
+  text-align: center;
   width: 100%;
   height: 30px;
-  background-color: red;
+  background-color: rgb(255, 255, 255);
   color: black;
 }
 /*
@@ -533,17 +534,19 @@ ul.signUpform li input:hover {
 !Game page design
 */
 .gameCanvas{
-background-color: rgb(255, 255, 255);
+background-color: rgb(148, 139, 108);
 width: 60%;
 height: 60%;
 color:rgb(0, 0, 0);
 margin-left: 20%;
 margin-top: 10%;
 box-shadow: 0 0 50px black;
+justify-content: center;
+text-align: center;
 }
-.gameCanvas .gameTitle{
+.gameTitle{
   color: rgb(255, 255, 255);
-  text-shadow: 0 0 10px red;
+  text-shadow: 0 0 0 red;
   font-weight: bold;
   width: 100%;
   height: 30px;
@@ -551,10 +554,47 @@ box-shadow: 0 0 50px black;
   background-color: rgb(45, 30, 58);
   text-align: center;
 }
-.gameCanvas .startGame-button{
-  background-color: black;
+.startScreen  p{
+  color: white;
+  text-shadow: 0 0 10px red;
+  font-size: 20px;
+  margin-top: 7%;
+}
+/* start button puls animation */
+#startGame-button{
+  text-align: center;
+  font-size: 15px;
+  color: white;
+  text-shadow: 0 0 10px red;
+  background-color: rgb(44, 35, 61);
+  border:none;
   border-radius: 50%;
-  margin: 10px;
-  height: 20px;
-  width:20px;
+  height: 100px;
+  width:100px;
+  margin-top: 8%;
+
+  box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+	transform: scale(1);
+	animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(32, 14, 29, 0.7);
+	}
+
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+	}
+
+	100% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
+}
+
+#startGame-button:hover{
+  background-color: rgb(166, 193, 233);
 }
