--- a/style.css
+++ b/style.css
@@ -11,20 +11,77 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   min-height: 100%;
 }
-footer {
-  text-align: center;
+
+footer{
+  display:flex;
+  gap: 10%;
   width: 100%;
+  height: 200px;
+  background-color: slategray;
+}
+footer > div{
+  width: 150px;
+  height: 40px;
+  position: relative;
+  left: 12%;
+}
+.side1 h1{
+  text-align: centre;
+  color: white;
+  font-size: 20px;
+  padding-top: 10px;
+}
+.side1 p{
+  text-align: centre;
+  color: grey;
+  font-size: 12px;
+}
+.side2 > a{
+  text-decoration: none;
+  font-size: 12px;
+  color: white;
+  display: block;
+  padding-top: 15px;
+
+  
+}
+.followOn > div {
+  padding-top: 10px;
+  width: 30px;
   height: 30px;
-  background-color: rgb(255, 255, 255);
-  color: black;
+  background-size: cover;
+}
+.followOn a img{
+  gap: 20px;
+  display:flex;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  background-size: cover;
+  box-shadow: 0 0 10px black;
+}
+.side4 h1{
+  font-size: 16px;
+  padding: 10px;
+  color: white; 
+}
+.side4 input{
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px;
+}
+.side4 button{
+  padding: 5px;
+  background-color: orange;
+  border-radius: 10px;
 }
 /*
   * website animated background section
 */
 section {
   width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(90deg, #fd746c, #D9AFD9, #97D9E1, #734b6d);
+  height: 120vh;
+  background-image: linear-gradient(90deg, #FFDEE9, #B5FFFC, rgba(5,84,94,1), #bbb);
   background-size: 400% 400%;
   position: relative;
   animation: color-change 10s ease-in-out infinite;
@@ -44,7 +101,7 @@ section {
 
 header {
   width: auto;
-  background-color: #734b6d;
+  background-color: slategray;
 }
 header > div{
   position: relative;
@@ -55,7 +112,7 @@ nav {
   display:flex;
   gap: 10px;
   padding: 7px;
-  background-color:#734b6d;;
+  background-color :slategray;
   height: 70px;
   width: 100%;
   position: relative;
@@ -110,6 +167,9 @@ nav {
   text-decoration: none;
   padding: 12px;
   color: rgb(243, 243, 243);
+}
+.signN{
+  visibility: visible;
 }
 .signbtns a:hover {
   background-color: none;
@@ -316,13 +376,6 @@ ul.signUpform li input:hover {
 * How to play page design
 */
 
-.grid-container > div {
-  background: rgb(99, 99, 99);
-  padding: 1rem;
-}
-.grid-container > div:nth-child(odd) {
-  background: rgba(111, 111, 111, 0);
-}
 .grid-container {
   grid-auto-rows: minmax(100px, auto);
   display: grid;
@@ -364,9 +417,33 @@ ul.signUpform li input:hover {
   background-color: aqua;
   color: black;
 }
-.grid-item-2 {
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.692);
+#rightTxt{
+  display: block;
+  color: black;
+  text-align: center;
+  font-size: 22px;
+  padding-top: 50%;
 }
+#gotoGame{
+  position: relative;
+  top: 40%;
+  left:5%;
+  text-decoration: none;
+  display: none;
+  border-radius: 10px;
+  background-color:rgb(65, 54, 78);
+  color:white;
+  width: 100px;
+  height: 40px;
+  text-align: center;
+  box-shadow: 0 0 10px black;
+}
+#gotoGame h1{
+  padding-top:10px;
+  font-size: 12px;
+  text-shadow: 0 0 10px red;
+}
+
 
 /*
 * Leaderboard page design
