--- a/styles/Game.css
+++ b/styles/Game.css
@@ -85,14 +85,42 @@
 
 
 /*
-Main screen of game
+selcetion screen
 replaces startScreen when button is pressed
  */
 
-#mainScreen {
+#selectionScreen {
     display: none;
     color: white;
     text-shadow: 0 0 10px #9c947c;
     font-size: 16px;
     margin-top: 7%;
+}
+#selectionScreen >  button{
+    width: 100px;
+    height: 50px;
+    color: white;
+    font-weight: bold;
+    border:none;
+    border-radius: 5px;
+    margin-top: 15%;
+    background-color: white;
+    box-shadow: 0 0 10px black;
+}
+#selectionScreen #Easy{
+    color: green;
+}
+#selectionScreen #Hard{
+    color: red;
+}
+#selectionScreen button:hover{
+background-color: #5c3c4c;
+}
+#selectionScreen h1{
+    margin-top: 10%;
+    color: #5c3c4c;
+}
+#selectionScreen p b{
+    color: black;
+    font-size: 17px;
 }
