--- a/styles/Game.css
+++ b/styles/Game.css
@@ -6,7 +6,7 @@
     background-color: #9c947c;
     background-repeat: 2fr;
     width: 60%;
-    height: 50%;
+    height: 40%;
     color: rgb(0, 0, 0);
     margin-left: 20%;
     margin-top: 5%;
@@ -123,4 +123,46 @@ background-color: #5c3c4c;
 #selectionScreen p b{
     color: black;
     font-size: 17px;
+}
+.commentBox{
+    margin-left: 20%;
+    margin-top: 3%;
+    width: 300px;
+}
+.commentBox > h1{
+    color: white;
+    font-size: 17px;
+}
+
+#comment{
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0 0 10px black;
+    margin-top: 10px;
+    width: 300px;
+    height: 80px;
+}
+
+#commentbtn{
+    color: white;
+    box-shadow: 0 0 4px black;
+    background-color: #5c3c4c;
+    border: none;
+    border-radius: 10px;
+    width: 100px;
+    height: 40px;
+    margin-top: 10px;
+}
+#commentbtn:hover{
+    background-color: #9c947c;
+}
+#comments {
+    text-align: left;
+    height: 20px;
+    padding-top: 20px;
+    color: aliceblue;
+    border: 2px solid black;
+    border-top: none;
+    border-left: none;
+    border-right: none;
 }
